--- a/blox/github.songxj99.experience_right_logo.html
+++ b/blox/github.songxj99.experience_right_logo.html
@@ -1,30 +1,80 @@
-{{/* My Custom Hugo Blox */}}
-{{/* https://hugoblox.com */}}
+{{/* Hugo Blox: Experience */}}
+{{/* Documentation: https://hugoblox.com/blocks/ */}}
+{{/* License: https://github.com/HugoBlox/hugo-blox-builder/blob/main/LICENSE.md */}}
 
-{{/* Initialise the block */}}
+{{/* Initialise */}}
 {{ $page := .wcPage }}
 {{ $block := .wcBlock }}
+{{ $columns := $block.design.columns | default "1" }}
 
-{{/* Your Hugo variables */}}
-{{/* Access custom front matter content via `$block.content`. */}}
-{{/* E.g. access a `title` field via `$block.content.title`. */}}
-{{/* Pipe the field to `$page.RenderString` to parse it as Markdown. */}}
-{{ $title := $block.content.title | $page.RenderString }}
-{{ $text := $block.content.text | $page.RenderString }}
+<!-- Experience widget -->
+<div class="col-12 {{if eq $columns "2"}}col-lg-8{{end}}">
+  {{ with $block.content.text }}{{ . | emojify | $page.RenderString }}{{ end }}
 
-{{/* Add your block layout below */}}
-{{/* Styles (in the form of vanilla CSS) can be added to the CSS file. */}}
-{{/* Tailwind styles can optionally be used with the extra step of compiling Tailwind. */}}
-{{/* Access custom front matter design options via `$block.design`. */}}
-{{/* E.g. access a `show_title` field via `$block.design.show_title`. */}}
+  {{ if $block.content.items }}
+  {{ $exp_len := len $block.content.items }}
 
-<div class="flex flex-col items-center max-w-prose mx-auto gap-3 justify-center">
+  {{/* Default to user's custom order (as requested in #1761) as Hugo doesn't support multiple sorts on params. */}}
+  {{ range $idx, $key := $block.content.items }}
+  <div class="row experience">
+    <!-- Timeline -->
+    <div class="col-auto text-center flex-column d-none d-sm-flex">
+      <div class="row h-50">
+        <div class="col {{if gt $idx 0}}border-right{{end}}">&nbsp;</div>
+        <div class="col">&nbsp;</div>
+      </div>
+      <div class="m-2">
+        <span class="badge badge-pill border {{if not .date_end}}exp-fill{{end}}">&nbsp;</span>
+      </div>
+      <div class="row h-50">
+        <div class="col {{if lt $idx (sub $exp_len 1)}}border-right{{end}}">&nbsp;</div>
+        <div class="col">&nbsp;</div>
+      </div>
+    </div>
+    <!-- Content -->
+    <div class="col py-2">
+      <div class="card">
+        <div class="card-body">
 
-  <div class="mb-6 text-3xl font-bold text-gray-900 dark:text-white">
-    {{ $title }}
+              <div class="section-subheading card-title exp-title text-muted my-0">{{.title | markdownify | emojify}}</div>
+              <div class="section-subheading card-title exp-company text-muted my-0">
+                {{- with .company_url}}<a href="{{.}}" target="_blank" rel="noopener">{{end}}{{.company | markdownify | emojify}}{{with .company_url}}</a>{{end -}}
+              </div>
+              <div class="text-muted exp-meta">
+                {{ (time .date_start) | time.Format ($block.Params.date_format | default "January 2006") }} –
+                {{ if .date_end}}
+                  {{ (time .date_end) | time.Format ($block.Params.date_format | default "January 2006") }}
+                {{else}}
+                  {{ i18n "present" | default "Present" }}
+                {{end}}
+                {{with .location}}
+                  <span class="middot-divider"></span>
+                  <span>{{.}}</span>
+                {{end}}
+              </div>
+
+          {{- if .company_logo}}
+          {{- $svg_icon := resources.Get (printf "media/icons/brands/%s.svg" .company_logo) -}}
+          {{ if not $svg_icon }}{{ errorf "Brand logo not found at `assets/media/icons/brands/%s.svg`" .company_logo }}{{end}}
+          <div class="d-flex align-content-start">
+            <div class="mr-2 mb-2">
+              {{- with .company_url}}<a href="{{.}}" target="_blank" rel="noopener">{{end -}}
+              <img src="{{ $svg_icon.RelPermalink }}" width="56" height="56" alt="{{.company | plainify}}" loading="lazy">
+              {{- with .company_url}}</a>{{end -}}
+            </div>
+            <div>
+          {{ end }}
+          
+          {{- if .company_logo}}
+            </div>
+          </div>
+          {{end}}
+
+          {{with .description}}<div class="card-text">{{. | markdownify | emojify}}</div>{{end}}
+        </div>
+      </div>
+    </div>
   </div>
-
-  {{ with $text }}
-    <p class="prose prose-slate lg:prose-xl dark:prose-invert max-w-prose">{{ . }}</p>
-  {{ end }}
+  {{end}}
+  {{end}}
 </div>
