--- a/blocks/github.songxj99.experience_right_logo.html
+++ b/blocks/github.songxj99.experience_right_logo.html
@@ -9,7 +9,7 @@
 
 <!-- Experience widget -->
 <div class="col-12 {{if eq $columns "2"}}col-lg-8{{end}}">
-  {{ with $block.content.title }}{{ . | emojify | $page.RenderString }}{{ end }}
+  {{ with $block.content.title }}<h1>{{ . | markdownify | emojify }}</h1>{{ end }}
 
   {{ if $block.content.items }}
   {{ $exp_len := len $block.content.items }}
