--- a/blocks/github.songxj99.experience_right_logo.html
+++ b/blocks/github.songxj99.experience_right_logo.html
@@ -20,6 +20,7 @@
 
   {{/* Default to user's custom order (as requested in #1761) as Hugo doesn't support multiple sorts on params. */}}
   {{ range $idx, $key := $block.content.items }}
+  <div class="experience">
     <!-- Timeline -->
     <div class="col-auto text-center flex-column d-none d-sm-flex">
       <div class="row h-50">
@@ -77,6 +78,7 @@
         </div>
       </div>
     </div>
+  </div>
   {{end}}
   {{end}}
 </div>
