--- a/blocks/github.songxj99.experience_right_logo.html
+++ b/blocks/github.songxj99.experience_right_logo.html
@@ -11,8 +11,10 @@
 <div class="col-12 {{if eq $columns "2"}}col-lg-8{{end}}">
 <!--   {{ with $block.content.title }}<h1>{{ . | markdownify | emojify }}</h1>{{ end }} -->
 
-  <div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start">
-    {{ with $block.content.title }}<h1 class="mb-0">{{ . | markdownify | emojify }}</h1>{{ end }}
+  <div class="row  {{if not $block.content.title | or (eq $columns "1") }}justify-content-center{{end}}">
+    <div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start">
+      {{ with $block.content.title }}<h1 class="mb-0">{{ . | markdownify | emojify }}</h1>{{ end }}
+    </div>
   </div>
   
   {{ if $block.content.items }}
@@ -20,7 +22,7 @@
 
   {{/* Default to user's custom order (as requested in #1761) as Hugo doesn't support multiple sorts on params. */}}
   {{ range $idx, $key := $block.content.items }}
-  <div class="experience">
+  <div class="row experience">
     <!-- Timeline -->
     <div class="col-auto text-center flex-column d-none d-sm-flex">
       <div class="row h-50">
