--- a/blocks/github.songxj99.experience_right_logo.html
+++ b/blocks/github.songxj99.experience_right_logo.html
@@ -5,19 +5,12 @@
 {{/* Initialise */}}
 {{ $page := .wcPage }}
 {{ $block := .wcBlock }}
-{{ $columns := $block.design.columns | default "2" }}
+{{ $columns := $block.design.columns | default "1" }}
 
 <!-- Experience widget -->
-
-<div class="row  {{if not $block.content.title | or (eq $columns "1") }}justify-content-center{{end}}">
-    <div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start">
-      {{ with $block.content.title }}<h1 class="mb-0">{{ . | markdownify | emojify }}</h1>{{ end }}
-    </div>
-  </div>
-
 <div class="col-12 {{if eq $columns "2"}}col-lg-8{{end}}">
-<!--   {{ with $block.content.title }}<h1>{{ . | markdownify | emojify }}</h1>{{ end }} -->
-  
+  {{ with $block.content.text }}{{ . | emojify | $page.RenderString }}{{ end }}
+
   {{ if $block.content.items }}
   {{ $exp_len := len $block.content.items }}
 
