--- a/blocks/github.songxj99.experience_right_logo.html
+++ b/blocks/github.songxj99.experience_right_logo.html
@@ -37,12 +37,12 @@
         <div class="card-body">
 
           {{- if .company_logo}}
-          {{- $svg_icon := resources.Get (printf "media/icons/brands/%s.svg" .company_logo) -}}
-          {{ if not $svg_icon }}{{ errorf "Brand logo not found at `assets/media/icons/brands/%s.svg`" .company_logo }}{{end}}
+          {{- $icon_path := resources.Get (printf "media/icons/brands/%s" .company_logo) -}}
+          {{ if not $icon_path }}{{ errorf "Brand logo not found at `assets/media/icons/brands/%s`" .company_logo }}{{end}}
           <div class="d-flex align-content-start">
             <div class="mr-2 mb-2">
               {{- with .company_url}}<a href="{{.}}" target="_blank" rel="noopener">{{end -}}
-              <img src="{{ $svg_icon.RelPermalink }}" width="56px" height="56px" alt="{{.company | plainify}}" loading="lazy">
+              <img src="{{ $icon_path.RelPermalink }}" width="60px" height="60px" alt="{{.company | plainify}}" loading="lazy">
               {{- with .company_url}}</a>{{end -}}
             </div>
             <div>
